# curve-fitting

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
include/: Dataset.hpp  ExpEquation.hpp  LogEquation.hpp  Matrix.hpp  PolyEquation.hpp  matrix.hpp
src/: Dataset.cpp  ExpEquation.cpp  LogEquation.cpp  Matrix.cpp  PolyEquation.cpp  matrix.cpp
